--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -34,7 +34,7 @@ MathJax.Hub.Queue(function() {
 
 # Codingame
 
-Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a huge range of codding languages, and I personalgly mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and in the contests, you get a global ranking on the website. I mainly worked on multiplayer pluzzles : creation of bots for several games : a card game, a quidditch match, a tron battle, etc.
+Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a vast range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and the contests, you get a global ranking on the website. I mainly worked on multiplayer puzzles : the creation of bots for several games: a card game, a quidditch match, a Tron battle, etc.
 
 ![quidditch]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/quidditch.png)
 
@@ -56,10 +56,10 @@ Codingame is a website where you can solve puzzles, work on optimization problem
 
 ## The game
 
-This is a [game](https://www.codingame.com/multiplayer/bot-programming/legends-of-code-magic) created by [Jakub Kowalski and Radosław Miernik](https://jakubkowalski.tech/Projects/LOCM/), in cooperation with Codingame . This is a card game, opposing two players. The game is turn based, zero-sum, and without a possibility to tie. It is important to note that you only have 100ms to play each turn. The game is separated in two parts :
+This is a [game](https://www.codingame.com/multiplayer/bot-programming/legends-of-code-magic) created by [Jakub Kowalski and Radosław Miernik](https://jakubkowalski.tech/Projects/LOCM/), in cooperation with Codingame. This is a card game, opposing two players. The game is turn-based, zero-sum, and without a possibility to tie. It is important to note that you only have 100ms to play each turn. The game is separated into two parts :
 
-* First, you have to draw 30 cards from a pool of 160 cards. During 30 turns, the game will propose 3 cards, and you choose the one you want.
-* After that, each player will play. Several actions are available : attack with your cards, use items, invock cards with the available mana.
+* First, you have to draw 30 cards from a pool of 160 cards. During 30 turns, the game will propose three cards, and you choose the one you want.
+* After that, each player will play. Several actions are available: attack with your cards, use items, invoke cards with the available mana.
 * The game will end whenever someone's hp drop to zero.
 
 ![locam-1]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/locam-1.png)
@@ -72,19 +72,19 @@ Overview of the game, with both players HP, mana, cards in hand and cards on the
 
 ## The rules
 
-We can split the game into several components : Card drawing, Mana, Creatures and Items.
+We can split the game into several components: Cards, Mana, Creatures, and Items.
 
-* Card drawing : Player1 starts with 4 cards, while Player2 starts with 5 cards. Each turn, you can draw a new card. Some Creatures or Items can make you draw more than one card pear turn.
+* Cards: Player1 starts with 4 cards, while Player2 starts with 5 cards. Each turn, you can draw a new card. Some Creatures or Items can make you draw more than one card per turn.
 
-* Mana : You can only use a card if you have enough mana for the specific card. Player1 starts with 1 mana, Player2 starts with 2. You gain one point of mana for each turn you play, until you reach 12 mana.
+* Mana: You can only use a card if you have enough mana for the specific card. Player1 starts with one mana, Player2 begins at 2. You gain one point of mana for each turn you play until you reach 12 mana.
 
-* Creatures : Creatures have a mana cost, attack points and defense points. Some creatures start with certain abilities. By default, creatures can't attack the turn they are summoned, and they can attack once per turn only. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent. Creatures can also have different abilities, we will list them below.
+* Creatures: Creatures have a mana cost, attack points, and defense points. Some creatures start with specific abilities. By default, creatures can't attack the turn they are summoned, and they can attack once per turn only. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent. Creatures can also have different abilities, I will list them below.
 
-* Items : When played, items have an immediate and permanent effect on the board or on the players. They can modify the attack or defense of a creature, add or remove abilities. They can also damage or heal the opponent and you. You can find 3 types of items : green items (positiv effect on your creatures), red items (negativ effect of the opponent's creatures) and blue items (can target yourself or the opponent directly).
+* Items: When played, items have an immediate and permanent effect on the board or the players. They can modify the attack or defense of a creature, add or remove abilities. They can also damage or heal the opponent and you. You can find three types of items: green items (positive effect on your creatures), red items (harmful effect of the opponent's creatures) and blue items (can target yourself or the opponent directly).
 
 As for the six special abilities :
 
-* Breakthrough: Creatures with Breakthrough can deal extra damage to the opponent when they attack enemy creatures. If their attack damage is greater than the defending creature's defense, the excess damage is dealt to the opponent.
+* Breakthrough: Creatures with Breakthrough can deal extra damage to the opponent when they attack enemy creatures. If their attack damage is higher than the defending creature's defense, the excess damage is dealt to the opponent.
 
 * Charge: Creatures with Charge can attack the turn they are summoned.
 
@@ -98,9 +98,9 @@ As for the six special abilities :
 
 # My bot
 
-I split my bot into 4 different parts. The first one will take carft of the drafting phase. It is basically an hardcode evluation of every card from the game. The second one is how you choose which card you'll summon. Here, I used a Monte-carlo algorithm (MC), with an evaluation function. The third part needs you to decide which card will atack who.
+I split my bot into four different parts. The first one will take care of the drafting phase. It is a hardcode evaluation of every card from the game. The second one is how you choose which card you'll summon. Here, I used a Monte-Carlo algorithm (MC), with an evaluation function. The third part needs you to decide which card will attack who.
 
-Again, I combined an MC with a MinMax algorithm. Finally, the last part is the heuristic I used. Every part of my code is using heuristic and pruning to help my code take better decisions, since it is mainly based on chance.
+Again, I combined an MC with a MinMax algorithm. Finally, the last part is the heuristic I used. Every piece of my code is using heuristic and pruning to help my code take better decisions since it is mainly based on chance.
 
 You only have a limited amount of time when you play :
 
@@ -131,7 +131,7 @@ You only have a limited amount of time when you play :
 
 ## Monte Carlo
 
-Intuitively, a Monte-Carlo method means that we will use several random draws in order to approximate the calcul of something. It could mean: shooting random arrows in a square with a circle in it. The proportion of arrows into the circle will allow us to approximate $\pi$. In a game, we could simulate random moves and evaluate them in order to find the best sequence of move possible.
+Intuitively, a Monte-Carlo method means that we will use several random draws to approximate the value of something. It could mean: shooting random arrows in a square with a circle in it. The proportion of arrows into the circle will allow us to approximate $\pi$. In a game, we could simulate random moves and evaluate them to find the best sequence of move possible.
 
 On a more mathematical point of view, let $x_1, x_2, ..., x_N$ *i.i.d.* laws, following the same law as a random variable $X$. For any borelian fuction $f$ (with $f(X) \in L^1$), we can calculate the following approximation :
 
@@ -141,18 +141,18 @@ In fact, if we denote  $I = \mathbb{E}(f(X))$ and $I_N = \frac{1}{N} \displaysty
 
 $$ I_N \rightarrow I \; \; a.s.$$
 
-For example, let's say we are playing a game of tic-tac-toe. Every time we have to play, one solution could be to play several random moves, evaluate them (wich one is the most promising?) and play the best. Even more, we could also play several sequence of random moves (*e.g.*: one move for me - one for my opponent - one for me) aand apply the same strategy.
+For example, let's say we are playing a game of tic-tac-toe. Every time we have to play, one solution could be to perform several random moves, evaluate them (which one is the most promising?) and play the best. Even more, we could also play several sequences of random moves (*e.g.,*: one move for me - one for my opponent - one for me) and apply the same strategy.
 
 ## MCTS
 
-Now, a Monte-Carlo method has several flaws, but one of them is the fact the moves are drawn randomly. We could spend a lot of time simulating moves that are not interesting at all. Therefore, an idea would be to simulate and evaluate the more promissing moves. This is called a Monte-Carlo Tree Search.
+Now, a Monte-Carlo method has several flaws, but one of them is the fact the moves are drawn randomly. We could spend a lot of time simulating moves that are not interesting at all. Therefore, an idea would be to simulate and evaluate the more promising moves. This is called a Monte-Carlo Tree Search.
 
 The first idea is to view a game as a tree: each node being one possible state of the game.
 
 <div class="message">
 <p><strong>Trees</strong></p>
 
-<p>A tree is a mathematical/CS object with very strong properties. The best way to see it is to consider how one is built :
+<p>A tree is a mathematical/CS object with powerful properties. The best way to see it is to consider how one is built :
 </p>
 
 <ul style="list-style-type:square;">
@@ -174,7 +174,7 @@ An overview of the beginning of a tic-tac-toe game, reproduced from
 </em>
 </center>
 
-An MCTS always follows the same 4 steps:
+An MCTS always follows the same four steps:
 
 ### Selection
 
@@ -182,7 +182,7 @@ Starting from the root, we select childrens, often following the *UCT* formula (
 
 $$ \frac{w}{n} + c\sqrt{\frac{\ln{N}}{n}}$$
 
-where $w$ is the amount of win from this node, $n$ the amount of time we visited this node, $N$ the amount of time we visited this node's father and $c$ an exploration parameter. This formula is suppose to give a good comprise between exploration and exploitation.
+where $w$ is the amount of win from this node, $n$ the amount of time we visited this node, $N$ the amount of time we visited this node's father and $c$ an exploration parameter. This formula is supposed to give a good comprise between exploration and exploitation.
 
 ### Expansion
 
@@ -190,11 +190,11 @@ If the selected node isn't terminal, we simulate one child from it.
 
 ### Simulation
 
-We simulate a game, starting from this child, until we reach a terminal state.
+We simulate a game, starting from this child until we reach a terminal state.
 
 ### Backpropagation
 
-Since we reached a terminal state, we can update every visited nodes with the new information : we lost or we won.
+Since we reached a terminal state, we can update every visited node with the new information: we lost, or we won.
 
 ![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/ttt-mcts-full.png)
 
@@ -206,7 +206,7 @@ Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/mo
 
 ### Evaluation function
 
-An MCTS supposes that it is possible (in a reasonable amount of time) to reach a terminal state. Now, this might not be possible : only partiable obersvations (like in this game, where you can't predict the hand of the opponent), computational time that is too heavy, etc. Therefore, it is interesting to define an evaluation function (like in Evolutianory Algorithm) : the goal of such a function is to characterize how good (or bad) a state of the game is.
+An MCTS supposes that it is possible (in a reasonable amount of time) to reach a terminal state. Now, this might not be possible: only partial observations (like in this game, where you can't predict the hand of the opponent), computational time that is too heavy, etc. Therefore, it is interesting to define an evaluation function (like in Evolutianory Algorithm): the goal of such a function is to characterize how good (or bad) a state of the game is.
 
 <div class="message">
 For example in a game of tic-tac-toe, it could be number of <em> opportunity </em> (square that would make you win if you played here)
@@ -214,14 +214,14 @@ For example in a game of tic-tac-toe, it could be number of <em> opportunity </e
 
 ## Draft phase
 
-When the contest started, I believed that the draft phase would not be the key part of the contest. As it will turned out, this was a mistake. My first strategy was to follow a mana curve (a sort of gaussian, with a mean at 6 of mana). If this strategy worked fine, this was clearly not the best choice.
+When the contest started, I believed that the draft phase would not be the crucial part of the contest. As it will turn out, this was a mistake. My first strategy was to follow a mana curve (a sort of gaussian, with a mean at 6 of mana). If this strategy worked fine, this was not the best choice.
 
-After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The idea would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build a genetic algorithms, each individual of the population being a set of score for each cards.
+After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The plan would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build genetic algorithms, each individual of the population being a set of score for each card.
 
 <div class="message">
 <p><strong>Genetic Algorithms</strong></p>
 
-To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individuals, and then keep some of the best for the next generation. In order to build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.
+To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individual, and then keep some of the best for the next generation. To build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.
 
 This is an optimization algorithm I love, and I used it a lot on Codingame.
 </div>
@@ -234,7 +234,7 @@ It seemed like a good idea, and it turned out it was. However, some other player
 
 ## Playing phase
 
-A key point here, since as I said earlier, it is impossible to simulate the game until a terminal state, is an eveluation function.
+A key point here, since as I said earlier, it is impossible to simulate the game until a terminal state, is an evaluation function.
 
 I used the same one for both the summoning and the attacking phase (you could even unsplit these two parts and evaluate them at the same time). During the contest, I built several functions:
 
@@ -292,7 +292,7 @@ public double f(int n,int mineHp,int opponentHp){
 ```
 
 ### Evaluation function 2 - Simple
-However, I also tried (unsucessfully) other evaluation function during the contest. A simpler one was talking the same shape as above, but where $f$ was the score of each card from the drafting phase.
+However, I also tried (unsuccessfully) other evaluation function during the contest. A simpler one was talking the same shape as above, but where $f$ was the score of each card from the drafting phase.
 
 ### Evaluation function 3 - Tempo
 
@@ -302,17 +302,17 @@ The last one was based on the tempo of the player. Here is a definition from an 
 * The momentum of the match. Probably the original definition and among many unofficially accepted "right" ones. However, its imprecision can lead to misunderstandings and odd interpretations causing confusion in discussion.
 * The change of the board state in a given time (usually either a play or a turn, as in "a good/bad tempo play/turn"). What this definition has in its favor is its simplicity, but this very simplicity means that it does not cover all the uses of this term.
 * The speed at which a player is reaching his/her win condition. An alternate interpretation of the original definition that is especially useful when discussing decks that don't mainly win by gaining board control or that don't aim at reaching that goal at the start of the game.
-* The value of the effect on the board state divided by the mana used. The main upside of this definition is its being in the form of a mathematical formula, because in the future it could be applied to calculations.
+* The value of the effect on the board state divided by the mana used. The main upside of this definition is its being in the form of a mathematical formula because in the future it could be applied to calculations.
 
-I tried to evaluate both my and the opponent's tempo, but this wasn't successeful either. This evaluation was using both player's HP, the defense of the cards they had on their board, and the mana both player had.
+I tried to evaluate both my and the opponent's tempo, but this wasn't successful either. This evaluation was using both player's HP, the defense of the cards they had on their board, and the mana both players had.
 
 ## Summoning phase
 
-The summoning phase was kept as simple as possible, in order to waste as little time as possible.
+The summoning phase was kept as simple as possible, to waste as little time as possible.
 
-First, I would check if I had to summon some cards. For example, a Guard card could save me if I was about to die, or a Charge card could finish the opponent immediatly. Therefore, I would always check first if certain situations occured, and apply them immediatly.
+First, I would check if I had to summon some cards. For example, a Guard card could save me if I was about to die, or a Charge card could finish the opponent immediately. Therefore, I would always check first if certain situations occurred and apply them directly.
 
-Once this was done, I would generate a random sequence of possible cards to summon, simulate it and evaluate the board. If the score was better than the current best, I would kept it.
+Once this was done, I would generate a random sequence of possible cards to summon, simulate it, and evaluate the board. If the score was better than the current best, I would keep it.
 
 ![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-summoning-1.png)
 
