--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -200,7 +200,7 @@ Since we reached a terminal state, we can update every visited node with the new
 
 <center>
 <em>
-Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Chaslot (2006)</a>.
+Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Chaslot et al. (2006)</a>.
 </em>
 </center>
 
