add attacking phase

--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -200,7 +200,7 @@ Since we reached a terminal state, we can update every visited node with the new
 
 <center>
 <em>
-Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Chaslot et al. (2006)</a>.
+Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Chaslot et al. g(2006)</a>.
 </em>
 </center>
 
@@ -324,12 +324,43 @@ Representation of the process going on for the summoning phase.
 
 ## Attacking phase
 
+Regarding the attacking phase, my strategy was to implement a depth-3 MCTS, as shown in the figure below.
+
 ![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-attacking-1.png)
 <center>
 <em>
 View of the tree I built during the attacking phase.
 </em>
 </center>
+
+However, some minor changes had to be done. First, this scenario simulates attacks from the opponent and the MCTS selection has to be modified : you now have to take into account your loose (or your worst evaluation function) since you want the opponent to be as good as possible. Then, you can't simulate the whole game until the end and this is why I decided to stop the expansion phase at depth-3, with a evaluation of the board (rather than a boolean *you win, you lose*).
+
+Finally, my code took the following form (with timelimit in mind):
+
+<table>
+  <thead>
+    <tr>
+      <th>Actions</th>
+      <th>Allocated time</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr>
+    <td>Sending outputs</td>
+    <td> 5ms </td>
+    </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>Response time for the summoning phase</td>
+    <td>25ms</td>
+  </tr>
+    <tr>
+      <td>Response time for the attacking phase</td>
+      <td>70ms</td>
+    </tr>
+  </tbody>
+</table>
 
 # Conclusion
 
