--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -364,6 +364,11 @@ Finally, my code took the following form (with timelimit in mind):
 
 # Conclusion
 
+In the end, 2200 people participated in the contest. It was leagues based, and we where around 90 in the final league. To go in higher league, you need to have a better score that the boss. The score is based on your wins and losses, against other players. You can find below my ranking troughout the contest.
+I ended up in the 69th position, and the 11th best student.
+
+Overall, it was a very fun contest. Their was a lot of work to do, a lot of different aspects to take into account, several algorithms could be used: a great game!
+
 ![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-ranking.png)
 <center>
 <em>
