--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -200,7 +200,7 @@ Since we reached a terminal state, we can update every visited node with the new
 
 <center>
 <em>
-Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Chaslot et al. g(2006)</a>.
+Explanation of an MCTS, reproduced from <a href="https://www.aaai.org/Papers/AIIDE/2008/AIIDE08-036.pdf">Chaslot et al. (2006)</a>.
 </em>
 </center>
 
@@ -377,8 +377,11 @@ My ranking (out of 2,200) some time in the contest.
 </center>
 
 # References
-- mdium mcts
-- codingame
-- codingame LOCAM
-- MONTE CARLO  paper
-- MCTS  
+
+1. [Medium - MCTS](https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238)
+
+2. [Monte-Carlo Tree Search: A New Framework for Game AI - Chaslot et al. (2006)](https://www.aaai.org/Papers/AIIDE/2008/AIIDE08-036.pdf)
+
+3. [Codingame](https://www.codingame.com)
+
+4. [Legens of Code & Magic](https://www.codingame.com/multiplayer/bot-programming/legends-of-code-magic)
