--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -385,3 +385,7 @@ My ranking (out of 2,200) some time in the contest.
 3. [Codingame](https://www.codingame.com)
 
 4. [Legens of Code & Magic](https://www.codingame.com/multiplayer/bot-programming/legends-of-code-magic)
+
+5. [Stream from reCurse during the contest](https://www.youtube.com/watch?v=BU9b445CpaM)
+
+6. [Basic RL approach from eiisolver](https://github.com/eiisolver/LegendsOfCodeAndMagic/blob/master/README.md)
