--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -33,7 +33,7 @@ MathJax.Hub.Queue(function() {
 
 # Codingame
 
-Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a vast range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and the contests, you get a global ranking on the website. I mainly worked on multiplayer puzzles : the creation of bots for several games: a card game, a quidditch match, a Tron battle, etc.
+Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a vast range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and the contests, you get a global ranking on the website. I mainly worked on multiplayer problems: the creation of bots for several games: a card game, a quidditch match, a Tron battle, etc.
 
 ![quidditch]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/quidditch.png)
 
@@ -73,11 +73,11 @@ Overview of the game, with both players HP, mana, cards in hand and cards on the
 
 We can split the game into several components: Cards, Mana, Creatures, and Items.
 
-* Cards: Player1 starts with 4 cards, while Player2 starts with 5 cards. Each turn, you can draw a new card. Some Creatures or Items can make you draw more than one card per turn.
+* Cards: Player1 starts with four cards, while Player2 begins with five cards. Each turn, you can draw a new card. Some Creatures or Items can make you draw more than one card per turn.
 
 * Mana: You can only use a card if you have enough mana for the specific card. Player1 starts with one mana, Player2 begins at 2. You gain one point of mana for each turn you play until you reach 12 mana.
 
-* Creatures: Creatures have a mana cost, attack points, and defense points. Some creatures start with specific abilities. By default, creatures can't attack the turn they are summoned, and they can attack once per turn only. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent. Creatures can also have different abilities, I will list them below.
+* Creatures: Creatures have a mana cost, attack points, and defense points. Some creatures start with specific abilities. By default, creatures can't attack the turn they are summoned, and they can attack once per turn only. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent. Creatures can also have different abilities; I will list them below.
 
 * Items: When played, items have an immediate and permanent effect on the board or the players. They can modify the attack or defense of a creature, add or remove abilities. They can also damage or heal the opponent and you. You can find three types of items: green items (positive effect on your creatures), red items (harmful effect of the opponent's creatures) and blue items (can target yourself or the opponent directly).
 
@@ -215,7 +215,7 @@ For example in a game of tic-tac-toe, it could be number of <em> opportunity </e
 
 When the contest started, I believed that the draft phase would not be the crucial part of the contest. As it will turn out, this was a mistake. My first strategy was to follow a mana curve (a sort of gaussian, with a mean at 6 of mana). If this strategy worked fine, this was not the best choice.
 
-After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The plan would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build genetic algorithms, each individual of the population being a set of score for each card.
+After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The plan would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build genetic algorithms; each individual of the population being a set of scores for each card.
 
 <div class="message">
 <p><strong>Genetic Algorithms</strong></p>
@@ -307,7 +307,7 @@ I tried to evaluate both my and the opponent's tempo, but this wasn't successful
 
 ## Summoning phase
 
-The summoning phase was kept as simple as possible, to waste as little time as possible.
+The summoning phase was kept as simple as possible to waste as little time as possible.
 
 First, I would check if I had to summon some cards. For example, a Guard card could save me if I was about to die, or a Charge card could finish the opponent immediately. Therefore, I would always check first if certain situations occurred and apply them directly.
 
@@ -332,9 +332,9 @@ View of the tree I built during the attacking phase.
 </em>
 </center>
 
-However, some minor changes had to be done. First, this scenario simulates attacks from the opponent and the MCTS selection has to be modified : you now have to take into account your loose (or your worst evaluation function) since you want the opponent to be as good as possible. Then, you can't simulate the whole game until the end and this is why I decided to stop the expansion phase at depth-3, with a evaluation of the board (rather than a boolean *you win, you lose*).
+However, some minor changes had to be done. First, this scenario simulates attacks from the opponent and the MCTS selection has to be modified: you now have to take into account your loose (or your worst evaluation function) since you want the opponent to be as good as possible. Then, you can't simulate the whole game until the end, and this is why I decided to stop the expansion phase at depth-3, with an evaluation of the board (rather than a boolean *you win, you lose*).
 
-Finally, my code took the following form (with timelimit in mind):
+Finally, my code took the following form (with the time limit in mind):
 
 <table>
   <thead>
@@ -363,10 +363,10 @@ Finally, my code took the following form (with timelimit in mind):
 
 # Conclusion
 
-In the end, 2200 people participated in the contest. It was leagues based, and we where around 90 in the final league. To go in higher league, you need to have a better score that the boss. The score is based on your wins and losses, against other players. You can find below my ranking troughout the contest.
-I ended up in the 69th position, and the 11th best student.
+In the end, 2200 people participated in the contest. It was leagues based, and we were around 90 in the final league. To go to a higher league, you need to have a better score than the boss. The score is based on your wins and losses, against other players. You can find below my ranking throughout the contest.
+I ended up in the 69th position and the 11th best student.
 
-Overall, it was a very fun contest. Their was a lot of work to do, a lot of different aspects to take into account, several algorithms could be used: a great game!
+Overall, it was an enjoyable contest. There was a lot of work to do, a lot of different aspects to take into account; several algorithms could be used: a great game!
 
 ![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-ranking.png)
 <center>
