--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -84,6 +84,9 @@ We can split the game into several components: Cards, Mana, Creatures, and Items
 
 As for the six special abilities :
 
+
+ADD CARD IMG
+
 * Breakthrough: Creatures with Breakthrough can deal extra damage to the opponent when they attack enemy creatures. If their attack damage is higher than the defending creature's defense, the excess damage is dealt to the opponent.
 
 * Charge: Creatures with Charge can attack the turn they are summoned.
@@ -224,6 +227,8 @@ After some talks with other coders from the contest, the idea of hardcoding a sc
 To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individual, and then keep some of the best for the next generation. To build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.
 
 This is an optimization algorithm I love, and I used it a lot on Codingame.
+
+ADD IMG
 </div>
 
 In order to evaluate each individual, I used several methods. All of them are based on the same strategy: playing many games with this draft against another fixed one, and keeping the win rate as the score of the individuals.
